WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249159
[iOS] Scrolling after element focus does not avoid input views when OOP keyboard is enabled
https://bugs.webkit.org/show_bug.cgi?id=249159
Summary
[iOS] Scrolling after element focus does not avoid input views when OOP keybo...
Wenson Hsieh
Reported
2022-12-12 10:59:02 PST
rdar://88057475
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-12-12 11:27:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7500
EWS
Comment 2
2022-12-13 06:31:19 PST
Committed
257785@main
(beacee6a1c37): <
https://commits.webkit.org/257785@main
> Reviewed commits have been landed. Closing PR #7500 and removing active labels.
Wenson Hsieh
Comment 3
2022-12-14 08:33:03 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/7612
EWS
Comment 4
2022-12-14 09:11:00 PST
Committed
257861@main
(3e5d99c2c3f8): <
https://commits.webkit.org/257861@main
> Reviewed commits have been landed. Closing PR #7612 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug